# SPML_open

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt
program/spml/: CMakeLists.txt
program/spml/include/: geodesy.h  lap.h  spml.h  statistics.h  timekeeper.h
program/spml/src/: geodesy.cpp  lap.cpp  spml.cpp  statistics.cpp  timekeeper.cpp
script/: run_all_tests.sh
